Added Async to Welcomes Endpoint